Fixed Labyrinth margins for overlap

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body { background-color: #e7e7e7; font-size: 10px; padding: 16px; }
 	border-left: solid 1px lightgray;
 	padding: 10px;
 	height: 140px;
-	float:left;
+	float: left;
 }
 #doors .card { margin-right: 15px; }
 
@@ -38,7 +38,7 @@ body { background-color: #e7e7e7; font-size: 10px; padding: 16px; }
 	height: 140px;
 	float: left;
 }
-#labyrinth .card { margin-right: -85px; }
+#labyrinth .card { margin-right: -68px; }
 
 #hand {
 	border-left: solid 1px lightgray;
